--- a/test/.env.example
+++ b/test/.env.example
@@ -4,5 +4,7 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB_NAME=http_auth_example_test
 
+REDIS_PORT=6379
+
 # github token with read access to private repos
 GITHUB_TOKEN=
