--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
       POSTGRES_SSL_MODE: disable
+      REDIS_HOST: redis
+      REDIS_PORT: ${REDIS_PORT}
     ports:
       - "8080:8080"
     networks:
@@ -34,9 +36,20 @@ services:
     networks:
       - bridge
 
+  redis:
+    image: redis:7.0-alpine
+    restart: unless-stopped
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redis_data:/data
+    networks:
+      - bridge
+
 volumes:
   db_data:
     name: ${POSTGRES_DB_NAME}_data
+  redis_data:
+    name: redis_data
 
 networks:
   bridge:
